--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="オリジナル・ポートフォーリオ">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Sample</title>
+    <title>中尾真広/ About</title>
+    <link rel="stylesheet" href="index.css">
     <!-- BootstrapのCSS読み込み -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- jQuery読み込み -->
@@ -13,6 +15,38 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html" class="btn btn-primary">Home</a></li>
+          <li><a href="index.html" class="btn btn-success">About</a></li>
+          <li><a href="contact.html" class="btn btn-warning">Contact</a></li>
+        </ul>
+      </nav>
+      <div id="logo">
+        <img src="Masa.jpg" alt="">
+        <h1>中尾 真広</h1>
+      </div>
+    </header>
+    <div class="container">
+      <section>
+        <h2>About</h2>
+        <div class="row"></div>
+        <h3>自己紹介</h3>
+        <p>中尾 真広</p>
+        <p>1994年生まれ。</p>
+        <p>兵庫県丹波市出身。現在、埼玉の大学に在学中。</p>
+        <p>趣味は、読書とテニス。</p>
+        <p>私の現在の活動について、気になる方は、<a href="contact.html">Contact</a>へご連絡ください。</p>
+      　<h3>リンク</h3>
+      　<ul>
+      <li><a href="https://github.com/masanakao12">Github</a></li>
+      <li><a href="https://www.facebook.com/masahiro.nakao.988">Facebook</a></li>
+        </ul>
+      </section>
+      <footer>
+        <p>&copy; 2016 Masahiro Nakao.</p>
+      </footer>
+    </div>
   </body>
 </html>
